--- a/appsscript.json
+++ b/appsscript.json
@@ -1,6 +1,11 @@
 {
   "timeZone": "America/Mexico_City",
   "dependencies": {
+    "libraries": [{
+      "userSymbol": "ArrayLib",
+      "libraryId": "1r9wNWbta3ebuYL4ENAdIp4UYKmyNiWf1AqsXYzfXduRHhTZEeTxS9MhZ",
+      "version": "13"
+    }]
   },
   "webapp": {
     "access": "DOMAIN",
